# YNAmazon

./: .env-template  .gitignore  .pre-commit-config.yaml  CLI_README.md  CONTRIBUTING.md  LICENSE  README.md  ai_summary.py  amazon_transactions.py  config-template.py  main.py  pyproject.toml  requirements.txt  ruff.toml  settings.py  tox.toml  ynab_transactions.py
.github/workflows/: tox_check.yml  validate_ynamazon.yml
scripts/: build_cli_docs.sh  check_typer_docs_hook.sh
src/ynamazon/: _version.py  amazon_transactions.py  base.py  cli.py  exceptions.py  main.py  memo_truncation.py  prompts.py  settings.py  types_pydantic.py  ynab_memo.py  ynab_transactions.py
src/ynamazon/amazon/: models.py
src/ynamazon/cli/: cli.py  target.py  utils.py
src/ynamazon/models/: amazon.py  memo.py
src/ynamazon/utilities/: attrpath.py  bases.py
src/ynamazon/wrappers/: ynab.py
src/ynamazon/wrappers/ynab/: __init__.py  accounts.py  common.py  payees.py  transactions.py
src/ynamazon/ynab/: memo.py
tests/: factories.py  test_memo_truncation.py
tests/amazon/: test_transactions.py
tests/models/: test_memo.py
tests/ynab/: conftest.py  test_memo_truncation.py  test_utilities.py
typings/amazonorders/: __init__.pyi  conf.pyi  exception.pyi  forms.pyi  orders.pyi  selectors.pyi  session.pyi  transactions.pyi  util.pyi
typings/amazonorders/entity/: item.pyi  order.pyi  parsable.pyi  recipient.pyi  seller.pyi  shipment.pyi  transaction.pyi
