[project]
name = "YNAmazon"
version = "0.1.0"
description = "YNAmazon - A program to annotate YNAB transactions with Amazon order info "
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
    "amazon-orders>=3.2.15",
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.2",
    "pydantic-settings>=2.8.1",
    "rich>=14.0.0",
    "ynab>=1.3.1",
]

[dependency-groups]
dev = [
    "deptry>=0.23.0",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "ruff>=0.11.4",
]
